--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "homepage": "https://eyad-a.github.io/react-blackjack",
   "version": "0.1.0",
   "private": false,
-  "dependencies": {
+    "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.3",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "axios": "^0.21.1",
+    "axios": "^0.21.4",
     "bootstrap": "^5.0.2",
+    "fs": "^0.0.1-security",
     "immutability-helper": "^3.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -24,7 +25,8 @@
     "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "collect-data": "node src/simulateGames.js" 
   },
   "eslintConfig": {
     "extends": [
@@ -47,5 +49,6 @@
   "devDependencies": {
     "@babel/plugin-transform-private-property-in-object": "^7.24.7",
     "gh-pages": "^3.2.3"
-  }
+  },
+  "type": "module"
 }
